--- a/read_files/read_files_ex.qmd
+++ b/read_files/read_files_ex.qmd
@@ -4,14 +4,11 @@ format: html
 editor: visual
 ---
 
-The function reads all the files in the folder "data" and then creates a big
-data frame. 
+The function reads all the files in the folder "data" and then creates a big data frame.
 
-The file names should have the same lenght. 
+The file names should have the same lenght.
 
-This function uses characters from the file name to create columns. For ex, 
-in this case uses the first character to create a condition column and the next
-2 characters to create a participant column. 
+This function uses characters from the file name to create columns. For ex, in this case uses the first character to create a condition column and the next 2 characters to create a participant column.
 
 ```{r}
 library(tidyverse)
@@ -23,4 +20,3 @@ dat <- read_files("data/", cond = 1, participant = 2)
 
 dat
 ```
-
