making it consistent with calculate_proportions

--- a/calculate_proportions/calculate_proportions.qmd
+++ b/calculate_proportions/calculate_proportions.qmd
@@ -11,8 +11,11 @@ list.files("R", full.names = TRUE) |> walk(source)
 ```
 
 
+
 ```{r}
 mtcars |> 
   group_by(cyl) |> 
-  calculate_proportions(vs)
+  summarise(calculate_proportions(vs))
 ```
+
+
