--- a/read_files/read_files_ex.qmd
+++ b/read_files/read_files_ex.qmd
@@ -4,7 +4,7 @@ format: html
 editor: visual
 ---
 
-The function reads all the files in the folder "data" and then creates a big data frame.
+The function reads all the csv files in the folder "data" and then creates a big data frame.
 
 The file names should have the same lenght.
 
@@ -22,4 +22,18 @@ dat <- read_files("data", cond = 1, participant = 2)
 
 dat
 ```
+
+
+
+```{r}
+dat <- read_files("data", 
+                  extension = "txt", 
+                  cond = 1, 
+                  participant = 2, 
+                  day = 3, 
+                  session = 3)
+
+dat
+```
+
 
